Add custom Spring Cloud Binding for MinIO.  Refresh docs for PREREQ, RUN, and TOOLS.